--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,50 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{padding: 0; margin: 0; box-sizing: border-box;}
+body{
+    background: #fffbcd;
+}
+::-webkit-scrollbar{
+    background:transparent;
+    width:12px;
+}
+::-webkit-scrollbar-thumb{ 
+    border-radius: 8px;
+    background: #fbca1f;
+    border: 2px solid #000;
+}
+button {
+    background: #fbca1f;
+    font-family: inherit;
+    padding: 5px 7px;
+    font-weight: 900;
+    font-size: 18px;
+    border: 3px solid #000;
+    border-radius: 0px;
+    box-shadow: 2px 2px #000;
+    margin: 0 2px;
+    cursor: pointer;
+}
+button:hover {
+    color: #fff;
+}
+button:active {
+    transform: translate(0.05em, 0.05em);
+    box-shadow: 0.05em 0.05em #000;
+}
+input:focus {
+    box-shadow: 3px 3px 15px #000;
+}
+footer{
+    background: #fbca1f;
+    font-family: inherit;
+    padding: 5px;
+    font-weight: 900;
+    border: 3px solid #000;
+    border-radius: 0px;
+    box-shadow: 2px 2px #000;
+    margin: 25px 0;
+    cursor: default;
+}
